updates to add duty free

--- a/content/pages/contact.haml
+++ b/content/pages/contact.haml
@@ -21,7 +21,13 @@ Summary: Email information
   
         #### Legal: 
 
-        BVI Company Registration: xxxx
+        BVI Company Registration: 1811240
+      %h1 Timor Contact
+      :markdown
+        #### Our Address:
+  
+        02-06 Landmark Plaza
+        Dili, Timor Leste
     .col-md-4
       = haml :product_menu, :layout => false
 
