--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -12,7 +12,7 @@ Link text: Summary
         %section.lucky1
           = haml :marketing_tags, :layout => false
   .row
-    .col-md-3
+    .col-xs-3
       %h2 Scratch Cards
       :markdown
         * Paper and computer based scratch card solutions
@@ -20,25 +20,41 @@ Link text: Summary
         * Support and Training
         * Distribution Management
         * Reporting 
-    .col-md-3
+    .col-xs-3
+      %h2 Duty Free
+      :markdown
+        * Duty Free license in Timor Leste
+        * Management of 4 border crossings and airport/city duty free
+        * Import and distribution management of various products
+        * Distribution management of local Timorese products
+    .col-xs-3
       %h2 Gaming Cafes
       :markdown
         * Small gaming cafes 10 -100 terminals	
         * Available as full standalone or service provider package
         * Unique terminals with ticket in/out and cash out solutions
         * Complete reporting system and auditing for regulators
-    .col-md-3
+    .col-xs-3
       %h2 Lotteries
       :markdown
         * Solutions for tickets and mobile lotteries
         * Distribution Management
         * Our own terminals and hardware developments
-        * Diverse payout strategies and mathematical solutions
-    .col-md-3
+        * Diverse payout strategies and mathematical solution
+  .row
+    .col-xs-6
+      %h2 Electronic Payment Solutions
+      :markdown
+        + Emerging market payment solution
+        + Dedicated proprietary terminals
+        + Distribution development of payment solutions
+        + Wallet system with support for electronic and physcal products
+    .col-xs-6
       %h2 Our Strengths
       :markdown
-        + Emerging market gaming license acquisition
+        + Emerging market regulated license acquisitions 
         + [Partner](clients) development
+        + Distribution Management
         + [Turnkey](platforms) solution
         + [Scratch Card](/platforms/scratch) and Lottery data generation
         + [Cafes](/platforms/cafes) for both gaming and computer based scratch
