--- a/views/learn_more.haml
+++ b/views/learn_more.haml
@@ -1,5 +1,4 @@
 %h4 Learn More
 :markdown
   * Lotteris [4D, 6D, 636 etc](/platforms/lottery)
-  * Free POS trial [Coming Soon](http://estorm-pos.herokuapp.com)
-  * Real [lottery time dashboards](http://tl-sms-dashboard-public.herokuapp.com/lotto)
+  * Real [time lottery dashboards](http://tl-sms-dashboard-public.herokuapp.com/lotto)
