--- a/views/sea_users.haml
+++ b/views/sea_users.haml
@@ -14,7 +14,7 @@
         %a(href="http://bwdi.com") Blue Water Development
   %li
     %blockquote
-      “SEA Entertainment solution allows to offer computer based scratch cards as a supplement to our existing scratch card license..”
+      “SEA Entertainment duty free implentation at 5 border crossings should help sell local Timorese products.”
       %cite
-        Steve C,
-        %a(href="http://bwdi.com") Blue Water Development
+        XXXX
+        %a(href="http://www.gov.tl") Timor MTCI repreentative
