--- a/content/pages/clients.haml
+++ b/content/pages/clients.haml
@@ -8,13 +8,13 @@ Summary: Client list
   %h1 Clients and Partners
   .row
     .col-md-9
-      .carousel(id="myClientCarousel" class="slide")
+      #carousel-myClientCarousel(class="carousel slide" data-ride="carousel" data-interval=4000)
         %ol.carousel-indicators
-          %li{"data-target"=>"#myClientCarousel", "data-slide-to"=>"0" ,:class=>"active"}
-          - 1.upto(4)  do |k|
-            %li{"data-target"=>"#myCarousel", "data-slide-to"=>"#{k}" }
+          %li(data-target="#carousel-myClientCarousel" data-slide-to="0" class="active")
+          - 1.upto(3) do |i|
+            %li(data-target="#carousel-myClientCarousel" data-slide-to="#{i}" )
         .carousel-inner
-          - [{:link => "http://www.fiestahms.com",:itemstate=>"active", :caption =>"Fiesta",:image => "eastern.jpg", :text =>"Fiesta is our partner for casino management software and cash handling"}, {:link => "http://sea-ent.com", :itemstate=>"", :caption =>"Cambodia", :image => "smartroam.jpg", :text =>"In Cambodia we have partnered with SP Consulting for license acquisition"}, {:link => "http://www.simuong.com",:itemstate=>"", :caption =>"Laos", :image => "adfip.jpg", :text =>"In Laos we are partnered with the Simong Group, A large entreprenuerial developer of Dams and Hotels."}, {:link => "http://www.bni.com",:itemstate=>"", :caption =>"Timor" , :image => "bni.jpg", :text =>"In Timor we run a sms lottery and are developing a network of Gaming Cafes in partnership with leading business people"},].each do |i|
+          - [{:link => "http://www.fiestahms.com",:itemstate=>"active", :caption =>"Fiesta",:image => "eastern.jpg", :text =>"Fiesta is our partner for casino management software and cash handling"}, {:link => "http://sea-ent.com", :itemstate=>"", :caption =>"Cambodia", :image => "smartroam.jpg", :text =>"In Cambodia we have partnered with SP Consulting for license acquisition"}, {:link => "http://www.simuong.com",:itemstate=>"", :caption =>"Laos", :image => "adfip.jpg", :text =>"In Laos we are partnered with the Simong Group, A large entreprenuerial developer of Dams and Hotels."}, {:link => "http://www.bni.com",:itemstate=>"", :caption =>"Timor" , :image => "bni.jpg", :text =>"In Timor we run a sms lottery and are developing a network of Gaming Cafes in partnership with leading business entrepreneurs"},].each do |i|
             .item{:class=> "#{i[:itemstate]}" }
               %img{:src=>"/attachments/partners/#{i[:image]}",  :alt=>"" }
               .container
@@ -24,9 +24,9 @@ Summary: Client list
                     #{i[:text]}
                   %a(href="#{i[:link]}" class="btn btn-info btn-large") 
                     Visit #{i[:caption]}
-        %a{:class=>"left carousel-control", :href=>"#myClientCarousel", "data-slide"=>"prev"}
+        %a{:class=>"left carousel-control", :href=>"#carousel-myClientCarousel", "data-slide"=>"prev"}
           <
-        %a{:class=>"right carousel-control" ,:href=>"#myClientCarousel", "data-slide"=>"next"}
+        %a{:class=>"right carousel-control" ,:href=>"#carousel-myClientCarousel", "data-slide"=>"next"}
           >
     .col-md-3
       = haml :product_menu, :layout => false
