--- a/views/footer.haml
+++ b/views/footer.haml
@@ -6,16 +6,16 @@
     .panel.panel-default
       .panel-heading
         %h5.panel-title
-          %a{:class=>"accordion-toggle", "data-toggle"=>"collapse" , "data-parent"=>"#accordian", "data-target"=>"#collapseOne"}
+          %a{:class=>"accordion-toggle", "data-toggle"=>"collapse" , "data-parent"=>"#accordian", "data-target"=>"#collapseFoot"}
             Show Version and Copyright
-      #collapseOne.panel-collapse.collapse
+      #collapseFoot.panel-collapse.collapse
         .panel-body
           = "Version: 1.2 " 
           %img(src="/attachments/estormcrm.jpg" width=50 height=50 alt='estorm logo')
           %a(href='http://www.sea-ent.com')
             %h6 Copyright Sea Entertainment Limited 2014
           %p
-            %small Company registration: xxxxx
+            %small BVI Company registration: 1811240
 
 
 
