update for projects and platforms

--- a/content/pages/platforms/cafes.haml
+++ b/content/pages/platforms/cafes.haml
@@ -7,10 +7,10 @@ Summary: Gaming Cafe systems
     .col-md-9
       %h1 Gaming Cafes
       :markdown
-        blah blah
+        We can and have run cafes with electronic gaming terminals.  Our experience includes running 280 cafes in the Philippines with the largest publically listed gaming provider.
 
     .col-md-3
-      = haml :product_menu, :layout => false
+      = haml :platform_menu, :layout => false
 
   .row
     .col-offset-9.col-md-3
