--- a/content/pages/platforms/lottery.haml
+++ b/content/pages/platforms/lottery.haml
@@ -14,7 +14,9 @@ Summary: Lottery Application
         As this is a specialised solution and generally requires a government license to run please contact us directly for further information.  We can also provide consulting in this area to help ensure that the solution is fair to the end consumer.
 
     .col-md-3
-      = haml :product_menu, :layout => false
+      = haml :platform_menu, :layout => false
+      = haml :project_menu, :layout => false
+      
 
   .row
     .col-offset-9.col-md-3
