--- a/content/pages/platforms/scratch.haml
+++ b/content/pages/platforms/scratch.haml
@@ -18,7 +18,9 @@ Summary: Scratch Card Data and Mathematics
         We have a trial system available for perusal at [TMS](http://test.tms.sg.estormtech.com).  [Contact](/contact) us for login details. 
 
     .col-md-3
-      = haml :product_menu, :layout => false
+      = haml :platform_menu, :layout => false
+      = haml :project_menu, :layout => false
+      
 
   .row
     .col-offset-9.col-md-3
