--- a/content/pages/platforms/terminals.haml
+++ b/content/pages/platforms/terminals.haml
@@ -13,7 +13,8 @@ Summary: Terminal Manufactuing
 
 
     .col-md-3
-      = haml :product_menu, :layout => false
+      = haml :platform_menu, :layout => false
+      = haml :project_menu, :layout => false
 
   .row
     .col-offset-9.col-md-3
