--- a/content/pages/platforms/tms.haml
+++ b/content/pages/platforms/tms.haml
@@ -14,7 +14,8 @@ Summary: Ticket/Distributor Management System
         We have a trial system available for perusal at [TMS](http://test.tms.sg.estormtech.com).  For login details please [contact us](/contact).
 
     .col-md-3
-      = haml :product_menu, :layout => false
+      = haml :platform_menu, :layout => false
+      = haml :project_menu, :layout => false
 
   .row
     .col-offset-9.col-md-3
