update for investment

--- a/content/pages/contact.haml
+++ b/content/pages/contact.haml
@@ -5,9 +5,9 @@ Summary: Email information
 .container
   .row
     .col-md-8
-      %h1 Contact
+      %h1 Singapore Contact
       :markdown
-        #### Our Address:
+        #### Our Singapore location:
   
         37th Floor, Singapore Land Tower,
         50 Raffles Place,
@@ -26,8 +26,17 @@ Summary: Email information
       :markdown
         #### Our Address:
   
+        Office
         02-06 Landmark Plaza
         Dili, Timor Leste
+        
+        Warehouse
+        Planta Kelapa
+        Dili
+        
+        Batugade
+        Customs Building
+        Mo Tain Border Crossing
     .col-md-4
       = haml :product_menu, :layout => false
 
