--- a/content/pages/platforms.haml
+++ b/content/pages/platforms.haml
@@ -19,6 +19,8 @@ Summary: Product list
         We have the capability to design, develop and print scratch cards.  Beyond the normal capabilities of an operator, we have additionally experience in distribution networks and mathematics to develop innovative scratch card games.
         #### Lotteries
         We run 4D and other lotteries on our own proprietary software.
+        #### Fund raising
+        We have sms fund raising products to support Athletics in Indonesia.
     .col-md-4
       = haml :product_menu, :layout => false
       = haml :learn_more, :layout => false
