--- a/content/pages/platforms/cafes.haml
+++ b/content/pages/platforms/cafes.haml
@@ -11,7 +11,8 @@ Summary: Gaming Cafe systems
 
     .col-md-3
       = haml :platform_menu, :layout => false
-
+      = haml :project_menu, :layout => false
+      
   .row
     .col-offset-9.col-md-3
       = haml :learn_more, :layout => false
