--- a/content/pages/projects.haml
+++ b/content/pages/projects.haml
@@ -7,16 +7,17 @@ Summary: Projects
     .col-md-8
       %h1 Projects
       :markdown
-        Ongoing projects include the following 
+        Ongoing projects include the following: 
 
-        #### Batugade
-        The only land border crossing in Indoneisa where we have a duty free license and a hotel license.  
-        #### Airport
-        We plan to launch the Dili Airpot duty free shortly.
+        #### Duty Free
+        ##### [Batugade](projects/batugade)
+        Timor Leste has the only land border crossing in Indoneisa where we have a duty free license and a hotel license.  [images](projects/batugade).  Our store in Batugade will open 2015 and Salele will likely open Dec 2015.
+        ##### Airport
+        We plan to launch the Dili Airport duty free before Q1 2016.
         #### Laos
-        In discussion for techology deployments around 
+        In discussion for techology deployments based on our proprietary terminal.
         #### Indonesia
-        We have a preliminary agreement to help support the ASEAN games in 2018 by running sms and sratch card funding projects.
+        We have an agreement to help support the ASEAN games in 2018 by running sms and sratch card funding projects.  We are operating this in partnership with XL, 7-11 stores, Telkcomcel and Indosat. This is primarily a [corporate social responsibility](http://www.koni-donasi.com) project which builds relationships for future business in Indonesia.
     .col-md-4
       = haml :project_menu, :layout => false
       = haml :learn_more, :layout => false
