--- a/views/marketing_tags.haml
+++ b/views/marketing_tags.haml
@@ -6,6 +6,6 @@
 
 %p Significant lottery system experience and scratch card systems (lottery software, sms software, ticket management software)
 
-%p Algorithms to develop scratch cards from low cost printers including the capability to generate our own data.
+%p Algorithms to develop scratch cards from low cost regional printers including the capability to generate our own data.
 
-%p Significant capability to develop and execute distribution businesses across south east asia.
+%p  Capability to develop and execute distribution and telecom businesses across South East Asia. Founders have direct experience operating in Vietnam, Cambodia, Singapore, Sri Lanka, Timor Leste, Pakistan, India, Philippines
