update for well

--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -12,7 +12,7 @@ Link text: Summary
         %section.lucky1
           = haml :marketing_tags, :layout => false
   .row
-    %well
+    .well
       %h2 Timor Investment Opportunity
       :markdown
          The attached file summarizes our projects in Timor Leste for which are looking for financial partners. [Investment Summary](attachments/Timor-Investment-v7-short.pdf)
