updae for michael

--- a/views/marketing_tags.haml
+++ b/views/marketing_tags.haml
@@ -9,3 +9,8 @@
 %p Algorithms to develop scratch cards from low cost regional printers including the capability to generate our own data.
 
 %p  Capability to develop and execute distribution and telecom businesses across South East Asia. Founders have direct experience operating in Vietnam, Cambodia, Singapore, Sri Lanka, Timor Leste, Pakistan, India, Philippines
+
+%p 
+  The attached file summarizes our projects in Timor Leste for which are looking for financial partners. 
+  %a(href="attachments/Timor-Investment-v7-short.pdf")
+    Investment Summary
