--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -17,7 +17,7 @@ Link text: Home
   .row
     .col-md-offset-4.col-md-5
       %a(href="/summary" class="btn btn-info btn-large") 
-        Enter the website to see the details
+        More details
   .row
     .col-md-7
       %section.lucky2
