update for new boostratp

--- a/content/pages/platforms.haml
+++ b/content/pages/platforms.haml
@@ -20,7 +20,7 @@ Summary: Product list
         #### Lotteries
         We run 4D and other lotteries on our own proprietary software.
         #### Fund raising
-        We have sms fund raising products to support Athletics in Indonesia.
+        We have sms fund raising products to support Athletics in Indonesia. [koni-donasi](http://www.koni-donasi.com)
     .col-md-4
       = haml :product_menu, :layout => false
       = haml :learn_more, :layout => false
