--- a/views/sea_users.haml
+++ b/views/sea_users.haml
@@ -1,20 +1,22 @@
-%h3 SEA Entertainment deployments
-%ul
-  %li
-    %blockquote
-      “SEA Entertainment has a mobile lottery in Timor Leste in partnership with Telkomcel and Estormtech.”
-      %cite
-        Adrian S,
-        %a(href="http://www.lucky-sms.net") Lucky SMS
-  %li
-    %blockquote
-      “SEA Entertainment solution allows to offer computer based scratch cards as a supplement to our existing scratch card license..”
-      %cite
-        Steve C,
-        %a(href="http://bwdi.com") Blue Water Development
-  %li
-    %blockquote
-      “SEA Entertainment duty free implentation at 5 border crossings should help sell local Timorese products.”
-      %cite
-        XXXX
-        %a(href="http://www.gov.tl") Timor MTCI repreentative
+.block.block-bordered.text-center
+  .container-fluid
+    %h3 SEA Entertainment deployments
+    %ul
+      %li
+        %blockquote.pull-quote
+          “SEA Entertainment has a mobile lottery in Timor Leste in partnership with Telkomcel and Estormtech.”
+          %cite
+            Adrian S,
+            %a(href="http://www.lucky-sms.net") Lucky SMS
+      %li
+        %blockquote.pull-quote
+          “SEA Entertainment solution allows to offer computer based scratch cards as a supplement to our existing scratch card license..”
+          %cite
+            Steve C,
+            %a(href="http://bwdi.com") Blue Water Development
+      %li
+        %blockquote.pull-quote
+          “SEA Entertainment duty free implentation at 5 border crossings should help sell local Timorese products.”
+          %cite
+            XXXX
+            %a(href="http://www.gov.tl") Timor MTCI repreentative
