--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -7,10 +7,11 @@ Link text: Summary
     %h1 
       Platforms Summary
   .row
-    %section.jumbotron
-      %section.hero-unit
-        %section.lucky1
-          = haml :marketing_tags, :layout => false
+    .panel.panel-bold.panel-info
+      .panel-body.p-b-lg
+        %h2
+          %section.lucky1
+            = haml :marketing_tags, :layout => false
   .callout
     .callout-content
       %h2 Timor Investment Opportunity
