--- a/content/pages/clients.haml
+++ b/content/pages/clients.haml
@@ -6,7 +6,7 @@ Summary: Client list
 
 .container-fluid
   .row
-    .col-md-offset-1.col-sm-9
+    .col-sm-offset-1.col-sm-8
       %h1 Clients and Partners
       .col-sm-4
         %ul.featured-list.featured-list-bordered
@@ -42,7 +42,7 @@ Summary: Client list
               Koni is the Indonesia sports athletics organization who is a partner in Indoniesia.
               %a(href="http://wwww.koni.co.id")
                 More details
-    .col-md-3
+    .col-sm-3
       = haml :product_menu, :layout => false
       = haml :learn_more, :layout => false
 /  .row-fluid
