--- a/content/pages/projects.haml
+++ b/content/pages/projects.haml
@@ -9,7 +9,7 @@ Summary: Projects
       :markdown
         Ongoing projects include the following: 
 
-        #### Duty Free
+        #### [Sea Duty Free](www.seadutyfree.com)
         ##### [Batugade](projects/batugade)
         Timor Leste has the only land border crossing in Indoneisa where we have a duty free license and a hotel license.  [images](projects/batugade).  Our store in Batugade will open 2015 and Salele will likely open Dec 2015.
         ##### Airport
