--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -36,12 +36,25 @@ Link text: Summary
         * Import and distribution management of various products
         * Distribution management of local Timorese products
     .col-xs-3
+      %h2 Wholesale Distribution
+      :markdown
+        * Regional distribution of alcohol, tobacco, sundries
+        * Utilizing our existing electronic product distribution system
+        * Import and sale of products to wholesalers at fair prices.
+        * Support and development of a proper wholesale and retail distribution network in Timor.
+    .col-xs-3
       %h2 Gaming Cafes
       :markdown
         * Small gaming cafes 10 -100 terminals	
         * Available as full standalone or service provider package
         * Unique terminals with ticket in/out and cash out solutions
         * Complete reporting system and auditing for regulators
+  .row
+    .col-xs-3
+      %h2 Local product development
+      :markdown
+        * Developmnet of hot sauce sales
+        * Processing of coffee into capsules
     .col-xs-3
       %h2 Lotteries
       :markdown
