--- a/content/pages/projects.haml
+++ b/content/pages/projects.haml
@@ -19,10 +19,13 @@ Summary: Projects
           Timor Leste has the only land border crossing in Indoneisa where we have a duty free license and a hotel license   
           %a(href="projects/batugade")
             (see images).
-          Our store in Batugade will open 2015 and Salele will likely open Dec 2015.
+          Our store in Batugade will open 2015  
         %h4  Airport
         %p 
           We plan to launch the Dili Airport duty free before Q1 2016.
+        %h4  Salele/Oecussi
+        %p 
+          Salele will likely open Dec 2015.  Oecussi will launch Q1 2016.  This would represent all of the land border crossings with Indonesia and would be a significant achievement.
       .col-xs-4
         %h3
           Food Production
@@ -33,7 +36,7 @@ Summary: Projects
         %h3
           Tobacco Production and Manufacturing
         %p 
-          We hope to use local tobacco to manufacture cigarettes for a population base of 1.3 milion of which more than 60% smoke.  We would use the profits from cigarette manufactuing to support other local product development.
+          We plan to use local tobacco to manufacture cigarettes for a population base of 1.3 milion of which more than 60% smoke.  We would use the profits from cigarette manufactuing to support other local product development.  Our models show that local production would result in a 50% cost improvement over imported products offering a significant cost advantage.
         %img.img-responsive(data-action="zoom"  src="/attachments/libro.jpg" alt='estorm logo')
       .col-xs-4
         %h3 Laos
