update for lotteris etc

--- a/content/pages/projects.haml
+++ b/content/pages/projects.haml
@@ -49,6 +49,12 @@ Summary: Projects
           %a(href="http://www.koni-donasi.com")
             corporate social responsibility
           project which builds relationships for future business in Indonesia.
+      .col-xs-4
+        %h3 Gaming Cafe/Hotel
+        %p
+          Futher  along in our roadmap is a gaming cafe at border crossings with Indonesia.  This would be contained in small hotels situated at the border.  Similar businesses are very successful in Laos (which addresses the Thai market) and Cambodia (addressing Vietnamese market)
+        %p
+          The hotel is also very complimentary with the duty free business.  Currently we have a hotel license and are looking for the gaming cafe license to strengthen the business model.
     .col-md-4
       = haml :project_menu, :layout => false
       = haml :learn_more, :layout => false
