--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -55,6 +55,7 @@ Link text: Summary
       :markdown
         * Developmnet of hot sauce sales
         * Processing of coffee into capsules
+        * Manufacturing of tobacco products
     .col-xs-3
       %h2 Lotteries
       :markdown
