--- a/views/footer.haml
+++ b/views/footer.haml
@@ -11,7 +11,7 @@
       #collapseFoot.panel-collapse.collapse
         .panel-body
           = "Version: 1.2 " 
-          %img(src="/attachments/estormcrm.jpg" width=50 height=50 alt='estorm logo')
+          %img(src="/attachments/seaentlogo.png" width=50 height=50 alt='estorm logo')
           %a(href='http://www.sea-ent.com')
             %h6 Copyright Sea Entertainment Limited 2014
           %p
