--- a/views/header.haml
+++ b/views/header.haml
@@ -7,7 +7,7 @@
           %span.icon-bar
       %a(class="navbar-brand" href="/")
         .span
-          %img( src="/attachments/logoestorm.jpg" width=23 height=23 alt='estorm logo')
+          %img( src="/attachments/seaentlogo.png" width=23 height=23 alt='estorm logo')
           %h5
             %strong
               = @heading
