updated telco pulsa and edtl

--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -63,6 +63,13 @@ Link text: Summary
         * Distribution Management
         * Our own terminals and hardware developments
         * Diverse payout strategies and mathematical solution
+    .col-xs-3
+      %h2 Electronic Distribution
+      :markdown
+        * Using our payment terminals we are distributors of pulsa (load/credit) for:
+        * Electriicy - EDTL
+        * Telcom - Telkomcel (current) and Timor Telecom (coming soon)
+        * We are looking to expand this into government payments and other services
   .row
     .col-xs-6
       %h2 Electronic Payment Solutions
