minor header fix

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -6,7 +6,7 @@
     .panel.panel-default
       .panel-heading
         %h5.panel-title
-          %a{:class=>"accordion-toggle", "data-toggle"=>"collapse" , "data-parent"=>"#accordian", "data-target"=>"#collapseFoot"}
+          %a{:class=>"accordion-toggle", "data-toggle"=>"collapse" , "href"=>"#" , "data-parent"=>"#accordian", "data-target"=>"#collapseFoot"}
             Show Version and Copyright
       #collapseFoot.panel-collapse.collapse
         .panel-body
@@ -19,7 +19,7 @@
 
 
 
-%script(type="text/javascript" src="http://code.jquery.com/jquery.js")
+%script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
 %script(type="text/javascript" src="/bootstrap/dist/js/bootstrap.js")
 %script(type="text/javascript" src="/javascripts/application.js")
 / %script(type="text/javascript" src="http://yandex.st/highlightjs/7.3/highlight.min.js")
