--- a/views/header.haml
+++ b/views/header.haml
@@ -1,7 +1,7 @@
 %nav.navbar.navbar-default
   .container-fluid
     .navbar-header
-      %button.navbar-toggle.collapsed{:type => "button", "data-toggle" => "collapse", "data-target" => "#navbar-ex-collapse", "aria-expanded"=>"false"}
+      %button.navbar-toggle.collapsed{:type => "button", "data-toggle" => "collapse","href"=>"#", "data-target" => "#navbar-ex-collapse", "aria-expanded"=>"false"}
         %span.sr-only Toggle Navigation
         - 1.upto(3) do |i|
           %span.icon-bar
