first image fix

--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -17,8 +17,9 @@ Link text: Home
         %h1.block-title(style="color:white")
           %strong
             Sea Entertainment Limited
-      .block-background
-        %iframe(frameBorder="0" src="attachments/blockback.jpg")
+      .block-background(style="background-image: url('attachments/blockback.jpg');")
+        / %iframe(frameBorder="0" src="attachments/blockback.jpg")
+        
     .callout
       .callout-content
         %section.lucky1
