--- a/content/pages/platforms.haml
+++ b/content/pages/platforms.haml
@@ -9,7 +9,7 @@ Summary: Product list
       :markdown
         A summary of the various products and solutions we deliver. 
 
-        #### Technlogy
+        #### Technology
         We use [Mathematica](http://wolfram.com) and [Ruby](http://ruby-lang.org) for website and integrated performance reporting for most of our technology development.  Some of our small terminal projects use RaspberryPi devices for inexpensive terminal solutions.
         #### Terminals
         We design and manufacture terminals with leading contract manufacturers in Taiwan
