--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -20,56 +20,7 @@ Link text: Summary
       %a(href="/attachments/Timor-Investment-v7-short.pdf" class="btn btn-info btn-large") 
         Download pdf file
   .row
-    .col-xs-3
-      %h2 Scratch Cards
-      :markdown
-        * Paper and computer based scratch card solutions
-        * Mathematics to develop scratch cards 
-        * Support and Training
-        * Distribution Management
-        * Reporting 
-    .col-xs-3
-      %h2 Duty Free
-      :markdown
-        * Duty Free license in Timor Leste
-        * Management of 4 border crossings and airport/city duty free
-        * Import and distribution management of various products
-        * Distribution management of local Timorese products
-    .col-xs-3
-      %h2 Wholesale Distribution
-      :markdown
-        * Regional distribution of alcohol, tobacco, sundries
-        * Utilizing our existing electronic product distribution system
-        * Import and sale of products to wholesalers at fair prices.
-        * Support and development of a proper wholesale and retail distribution network in Timor.
-    .col-xs-3
-      %h2 Gaming Cafes
-      :markdown
-        * Small gaming cafes 10 -100 terminals	
-        * Available as full standalone or service provider package
-        * Unique terminals with ticket in/out and cash out solutions
-        * Complete reporting system and auditing for regulators
-  .row
-    .col-xs-3
-      %h2 Local product development
-      :markdown
-        * Developmnet of hot sauce sales
-        * Processing of coffee into capsules
-        * Manufacturing of tobacco products
-    .col-xs-3
-      %h2 Lotteries
-      :markdown
-        * Solutions for tickets and mobile lotteries
-        * Distribution Management
-        * Our own terminals and hardware developments
-        * Diverse payout strategies and mathematical solution
-    .col-xs-3
-      %h2 Electronic Distribution
-      :markdown
-        * Using our payment terminals we are distributors of pulsa (load/credit) for:
-        * Electriicy - EDTL
-        * Telcom - Telkomcel (current) and Timor Telecom (coming soon)
-        * We are looking to expand this into government payments and other services
+    = haml :keyprojects, :layout => false
   .row
     .col-xs-6
       %h2 Electronic Payment Solutions
